add jacoco tests with 90% coverage